# TemplateHell

./: .clang-format  CMakeLists.txt  CMakePresets.json  flake.nix  instructions.md  main.cpp
Solutions/: typelevel_set1.cpp
pages/: C++ Metaprogramming Exercises Vol. I - Ondřej Slámečka.html  C++ Metaprogramming Exercises Vol. II - Ondřej Slámečka.html
pages/C++ Metaprogramming Exercises Vol. I - Ondřej Slámečka_files/: style.css
vol-1/: set.hpp  vector.hpp
vol-2/: a.hpp  concat.hpp  fibonacci.hpp  run-length-encoding.hpp
